# radapter

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.cross  LICENCE  LICENSE  README.md  bootstrap.lua  conanfile.py  definitions.lua  vcpkg.json
.devcontainer/ros/: devcontainer.json
app/: main.cpp
cmake/: CPM.cmake  IncludeBin.cmake  Packaging.cmake  warnings.cmake
examples/: cyphal.lua  declarative.lua  gui.lua  http.lua  modbus.lua  modbus_table.lua  plugin.lua  redis.lua  ros.lua  setup_vcan.sh  sql.lua  test_async.lua
examples/chat/: client.lua  client.qml  server.lua
examples/configurator/: Configurator.qml  QueriesForm.qml  RegistersForm.qml  configurator.lua
examples/demo/: Demo.qml  Gauge.qml  demo.lua
examples/demo/firmware/: firmware.ino  slipa.hpp
examples/modbus/: Table.qml  modbus_table.lua
include/: auto_reg.hpp  common.hpp  config.hpp  function.hpp  json.hpp  logs.hpp  lua.hpp  meta.hpp  node.hpp  radapter.hpp  radapter_info.hpp.in  serialize.hpp  value.hpp  worker.hpp
include/modbus/: master.hpp
include/radapter/: async_helpers.hpp  config.hpp  function.hpp  logs.hpp  radapter.hpp  trace_frame.hpp  value.hpp  worker.hpp
include/redis/: adapter.hpp  client.hpp  stream.hpp
plugins/: test.cpp
plugins/ros/: CMakeLists.txt  Dockerfile  compose.yml  ros_conversions.hpp  ros_plugin.cpp
plugins/ros/cmake/: toolchain_arm64.cmake
projects/scada/: ConfigContext.qml  Configurator.qml  ConnectionsList.qml  DetachableTabs.qml  DockHost.qml  DockablePanel.qml  FilePicker.qml  RefField.qml  RegistersForm.qml  SchemaForm.qml  TabPanel.qml  WorkerConfigurator.qml  WorkerGraph.qml  WorkerSender.qml  configurator.lua  declare.lua  runner.lua  scada.lua  test.lua
projects/scada/configurator/: ConfigContext.qml  Configurator.qml  DetachableTabs.qml  DockablePanel.qml  DragGhost.qml  QueriesForm.qml  RefField.qml  TabPanel.qml  WindowSettings.qml  WorkerSender.qml
projects/scada/goldens/: basic_workflow.json  docks.json  run_test.lua  tabs.json
projects/scada/hmi/: Chart.qml  Custom.qml  Gauge.qml  Hmi.qml  HmiEditor.qml  InfoDisplay.qml  Node.qml  Spacer.qml  WindowSettings.qml  tree.js
scripts/: Dockerfile.cross  Dockerfile.cross-gui  Dockerfile.cross-headless  Dockerfile.native  Dockerfile.native-gui  Dockerfile.native-headless  Dockerfile.ros  build.ps1  build.sh  containers.sh  packages.sh  test.lua
scripts/cmake/: toolchain_arm64.cmake
src/: async_helpers.hpp  builtin.cpp  builtin.hpp  builtin_funcs.hpp  compat.cpp  config.cpp  debug.cpp  function.cpp  instance.cpp  instance_impl.hpp  json.cpp  log.cpp  logs.cpp  lua.cpp  main.cpp  mobdebug.h  node.cpp  pushpop.hpp  radapter.cpp  radapter.qrc  serialize.cpp  tags.cpp  tags.hpp  utils.cpp  utils.hpp  value.cpp  worker.cpp  worker_impl.hpp
src/gui/: gui.cpp
src/lua/: bootstrap.lua
src/modbus/: master.cpp
src/qml/: ConfigContext.qml  ModbusTable.qml  QueriesForm.qml  RefField.qml  RegistersForm.qml  SchemaForm.qml  Splitter.qml  WorkerConfigurator.qml  WorkerGraph.qml  qmldir
src/redis/: client.cpp  stream.cpp
src/scripts/: async.lua  builtins.lua  coro_patch.lua  mobdebug.vscode.lua  runner.lua
src/workers/: binary_worker.cpp  binary_worker.hpp  slipa.hpp  test_worker.cpp  wire.hpp
src/workers/can/: canframe.hpp  canworker.cpp  cyphal_helpers.h  cyphal_includes.h  cyphal_msgs.cpp  cyphalworker.cpp
src/workers/gui/: gui.cpp  gui_tester.cpp
src/workers/http/: http.cpp
src/workers/local/: local.cpp
src/workers/modbus/: modbus.cpp  modbus_device.cpp  modbus_device.hpp  modbus_settings.hpp  modbus_slave.cpp  modbus_units.hpp
src/workers/process/: process.cpp
src/workers/redis/: qtadapter.cpp  qtadapter.hpp  redis.cpp  redis_client.cpp  redis_client.hpp  redis_inc.h
src/workers/serial/: serial.cpp
src/workers/sql/: sql.cpp
src/workers/stdio/: stdio.cpp
src/workers/websocket/: websocket.cpp  websocket_server.cpp
submodule/: CMakeLists.txt
tests/: Demo.qml  Gauge.qml  all.lua  basic.lua  can.lua  cyphal.lua  declare.lua  demo.lua  gui.lua  http.lua  local.lua  modbus.lua  modbus_loopback.lua  plugin.lua  process.lua  radapter.lua  redis.lua  ros.lua  runner.lua  scada.lua  serial.lua  smoke.lua  sql.lua  stdio.lua  tags.lua  test.qml  test_async.lua  websocket.lua
tests/chat/: client.lua  server.lua
tests/demo/: Demo.qml  demo.lua  make_topic.lua  parse_topics.lua
tests/demo/firmware/: firmware.ino  msg2struct.hpp  msgs.hpp  rad_topics.hpp  slipa.hpp
tests/serial/: echo.ino  serial.lua
